# datex-web

./: .gitignore  .rustfmt.toml  Cargo.toml  DEVELOP.md  FAQ.md  LICENSE  README.md  TODO.md  deno.json
.cargo/: config.template.toml  config.toml.example
.github/tools/: create-release.ts
.github/workflows/: deploy-beta.yml  publish.yml  release.yml  test.yml  version-bump.yml
datex-browser-demo/: README.md  index.html  package-lock.json  package.json  vite.config.ts
datex-browser-demo/src/assets/: main.css
datex-browser-demo/src/demo/: demo-runtime.ts
datex-browser-demo/src/router/: index.ts
datex-browser-demo/src/views/: DatexRuntime.vue
rs-lib/: Cargo.toml
rs-lib/src/: js_utils.rs  lib.rs  pointer.rs  runtime.rs
rs-lib/src/dif/: mod.rs
rs-lib/src/lsp/: io.rs  mod.rs
rs-lib/src/network/: com_hub.rs  errors.rs  mod.rs
rs-lib/src/network/com_interfaces/: base_interface.rs  matchbox_js_interface.rs  mod.rs  serial_js_interface.rs  webrtc_js_interface.rs  websocket_client_js_interface.rs  websocket_server_js_interface.rs  websocket_server_js_interface_old.rs
rs-lib/src/network/com_interfaces/serial/: mod.rs  serial_client.rs
rs-lib/src/network/com_interfaces/webrtc/: webrtc.rs
rs-lib/src/network/com_interfaces/websocket/: mod.rs  websocket_client.rs  websocket_server.rs
rs-lib/src/repl/: mod.rs
rs-lib/src/utils/: macros.rs
rs-lib/tests/: core_types.rs
scripts/: build-bundle.ts  build-npm.ts  build-wasm.ts  datex_web.node.js  wasm-opt.ts  wasm_url.node.js
src/: datex-web.ts  datex.ts  default.ts  mod.ts
src/datex-core/: datex_core_js.internal.js
src/datex-web/: datex_web.d.ts  datex_web.js
src/dif/: core.ts  definitions.ts  dif-handler.ts  display.ts  js-lib.ts  type-registry.ts  utils.ts
src/lib/js-core-types/: array.ts
src/lib/special-core-types/: endpoint.ts  range.ts
src/network/: com-hub.ts  mod.ts
src/network/interface-impls/: webrtc.ts  websocket-server-base.ts  websocket-server-deno-old.ts  websocket-server-deno.ts
src/network/interfaces/: webrtc.ts  websocket-server-base.ts  websocket-server-deno.ts
src/repl/: mod.ts
src/runtime/: runtime.ts  types.d.ts
src/utils/: devtools-formatter.ts
src/utils/js-runtime-compat/: js-runtime-browser.ts  js-runtime.ts
test/: browser.ts  crypto.test.ts  init.test.ts
test/datex-browser-demo/: README.md  index.html  package-lock.json  package.json
test/datex-browser-demo/src/assets/: main.css
test/datex-browser-demo/src/demo/: demo-runtime.ts
test/datex-browser-demo/src/router/: index.ts
test/datex-browser-demo/src/views/: DatexRuntime.vue
test/dif/: debug.test.ts  dif.test.ts  utils.test.ts
test/lib/js-core-types/: array.test.ts  map.test.ts
test/lib/special-core-types/: undefined.test.ts
test/lsp/: BasicConnect.test.ts
test/network/: JsInterfaceFactory.ts  WebsocketClientInterface.test.ts  WebsocketMockupServer.ts  WebsocketServerInterface.test.ts
test/runtime/: decompile.test.ts  execute.test.ts  json-compat.test.ts  value-parity.test.ts
