
[package]
name = "datex-web"
version = "0.0.12"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
]
license = "../LICENSE"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
datex = { git = "https://github.com/unyt-org/datex-core", branch = "refactor/update-loop", version = "0.0.8", default-features = false, features = [
    "std",
    "wasm_runtime",
    "compiler",
    "decompiler",
    "syntax_highlighting_legacy",
    "lsp_wasm",
] }
# datex_macros = { git = "https://github.com/unyt-org/datex-core", branch = "refactor/update-loop", version = "0.1.3", package = "datex_macros" }

async-trait = "0.1.87"
url = { version = "2.5.7" }
wasm-bindgen = { version = "=0.2.105", features = [] }
# FIXME make serde-wasm-bindgen optional
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
# serde-wasm-bindgen = "0.6"

wasm-bindgen-futures = "0.4.50"
js-sys = "=0.3.82"


# webrtc
futures = { version = "0.3", default-features = false }           # = "0.11", 
futures-timer = { version = "3", features = ["wasm-bindgen"] }
uuid = { version = "1.15.1", features = ["js"], optional = true }
futures-channel = "0.3.31"
specta-typescript = "0.0.9"
specta = "1.0.5"
tsify = "0.5.5"
gloo-timers = "0.3.0"

# webrtc
# tokio = { version = "1.43.0", default-features = false, features = [] }
[dependencies.web-sys]
version = "0.3.82"
features = [
    "Window",
    "AesCtrParams",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "CryptoKeyPair",
    "Serial",
    "SerialPort",
    "Navigator",
    "ReadableStream",
    "WritableStream",
    "SerialOptions",
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
    "EventTarget",
    "MessageEvent",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcConfiguration",
    "RtcIceServer",
    "MediaStream",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = [
    "wasm_websocket_client",
    "wasm_websocket_server",
    "wasm_serial",
    "wasm_webrtc",
    "lsp",                   # Make optional
]
debug = ["datex/debug", "datex/wasm_runtime"]
lsp = ["datex/lsp_wasm"]

wasm_websocket_server = [] # only required for a backend js runtime
wasm_websocket_client = [] # full support
wasm_serial = []           # only required for frontend js runtime
wasm_webrtc = ["uuid"]     # only required for frontend js runtime
