[package]
name = "datex-web"
version = "0.0.12"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
]
license = "../LICENSE"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
datex-core = { version = "0.0.9", default-features = false, features = [
    "target_wasm",
    "compiler",
    "decompiler",
    "syntax_highlighting_legacy",
    "lsp_wasm",
] }
datex-crypto-facade = { version = "0.0.1" }

# datex_macros = { git = "https://github.com/unyt-org/datex", branch = "refactor/update-loop", version = "0.1.3", package = "datex_macros" }

async-trait = "0.1.87"
url = { version = "2.5.7" }
wasm-bindgen = { version = "=0.2.112", features = [] }
# FIXME make serde-wasm-bindgen optional
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
# serde-wasm-bindgen = "0.6"

wasm-bindgen-futures = "0.4.61"
js-sys = "=0.3.89"


# webrtc
futures = { version = "0.3", default-features = false }           # = "0.11", 
futures-timer = { version = "3", features = ["wasm-bindgen"] }
uuid = { version = "1.15.1", features = ["js"], optional = true }
futures-channel = "0.3.31"
specta-typescript = "0.0.9"
specta = "1.0.5"
tsify = "0.5.5"
gloo-timers = "0.3.0"
cfg-if = "1.0.1"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"

# webrtc
# tokio = { version = "1.43.0", default-features = false, features = [] }
[dependencies.web-sys]
version = "0.3.89"
features = [
    "Window",
    "AesCtrParams",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "CryptoKeyPair",
    "Serial",
    "SerialOptions",
    "SerialPort",
    "Navigator",
    "ReadableStream",
    "WritableStream",
    "SerialOptions",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "WritableStreamDefaultWriter",
    "EventTarget",
    "MessageEvent",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcConfiguration",
    "RtcIceServer",
    "MediaStream",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = [
    "websocket-client",
    "serial-client",
    "webrtc",
    "lsp",              # Make optional
]
debug = []
lsp = ["datex-core/lsp_wasm"]

allow_unsigned_blocks = ["datex-core/allow_unsigned_blocks"]

websocket-client = [] # full support
serial-client = []    # only required for frontend js runtime
webrtc = ["uuid"]     # only required for frontend js runtime
